# learngrad

./: README.md  pyproject.toml
.github/workflows/: publish.yml
learngrad/: engine.py  nn.py  optimizers.py
main/notebooks/: demo.ipynb
notebooks/: demo.ipynb  from_scratch.ipynb
